--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chart.js": "^4.4.1",
     "express": "^4.18.2",
     "ngx-bootstrap": "^12.0.0",
+    "ngx-cookie-service": "^17.1.0",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
